<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="291dp"
        android:layout_height="141dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/editPalavraJogo"
        android:layout_width="234dp"
        android:layout_height="74dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/editPalavraJogo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/editQuantidadeTentativas"
        android:layout_width="234dp"
        android:layout_height="74dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/editQuantidadeTentativas"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPalavraJogo"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btnJogar"
        android:layout_width="234dp"
        android:layout_height="74dp"
        android:text="@string/btnJogar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editQuantidadeTentativas"
        app:layout_constraintVertical_bias="0.409"
        android:onClick="onClickJogar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>