<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/quantidadeTentativasRestantes"
        android:layout_width="178dp"
        android:layout_height="21dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/textTentativas"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPalavrasTentadas"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textQtdTentativas"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toEndOf="@+id/quantidadeTentativasRestantes"
        tools:text="" />

    <TextView
        android:id="@+id/textLetrasTentadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLetrasTentadas"
        app:layout_constraintBottom_toTopOf="@+id/editLetrasTentadas"
        app:layout_constraintStart_toStartOf="@+id/editLetrasTentadas" />


    <TextView
        android:id="@+id/editLetrasTentadas"
        android:layout_width="283dp"
        android:layout_height="56dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPalavra">

    </TextView>

    <TextView
        android:id="@+id/textPalavrasTentadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPalavrasTentadas"
        app:layout_constraintBottom_toTopOf="@+id/editPalavrasTentadas"
        app:layout_constraintStart_toStartOf="@+id/editPalavrasTentadas" />

    <TextView
        android:id="@+id/editPalavrasTentadas"
        android:layout_width="283dp"
        android:layout_height="104dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLetrasTentadas" />

    <TextView
        android:id="@+id/textPalavraJogo"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPalavra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/editTentarPalavra"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLetra" />

    <Button
        android:id="@+id/vaiPalavra"
        android:layout_width="69dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:text="@string/vai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toEndOf="@+id/editPalavra"
        app:layout_constraintTop_toTopOf="@+id/editPalavra"
        android:onClick="onClickTentativaPalavra"
        />

    <Button
        android:id="@+id/vaiLetra"
        android:layout_width="69dp"
        android:layout_height="49dp"
        android:layout_marginEnd="32dp"
        android:onClick="onClickTentativaLetra"
        android:text="@string/vai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toEndOf="@+id/editLetra"
        app:layout_constraintTop_toTopOf="@+id/editLetra"

        />

    <EditText
        android:id="@+id/editLetra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/editTentarLetra"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPalavraJogo" />






</androidx.constraintlayout.widget.ConstraintLayout>